repositorio clientes ok

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -49,6 +49,16 @@
 
                 />
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:text="Lista Clientes - DB Local"
+                android:layout_marginTop="20dp"
+                android:id="@+id/buttonOpenListCliente"
+                android:onClick="OpenListCliente"
+
+                />
+
 
         </android.support.v7.widget.LinearLayoutCompat>
 
